# stereo_dense_reconstruction

./: CMakeLists.txt  package.xml
calibration/: kitti_0027.yml  kitti_2011_09_26.yml
launch/: dense_reconstruction.launch  dense_reconstruction_kitti_0027.launch  dense_reconstruction_kitti_2011_09_26.launch
src/: dense_reconstruction.cpp
